Module 3, part 2 update