@@ -2,7 +2,8 @@ package com.epam.esm.gift_system.service.impl;
 
 import com.epam.esm.gift_system.repository.dao.TagDao;
 import com.epam.esm.gift_system.repository.model.Tag;
-import com.epam.esm.gift_system.service.ConverterService;
+import com.epam.esm.gift_system.service.DtoConverterService;
+import com.epam.esm.gift_system.service.EntityConverterService;
 import com.epam.esm.gift_system.service.TagService;
 import com.epam.esm.gift_system.service.dto.TagDto;
 import com.epam.esm.gift_system.service.exception.GiftSystemException;
@@ -13,36 +14,42 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import static com.epam.esm.gift_system.service.exception.ErrorCode.INVALID_NAME;
+import static com.epam.esm.gift_system.service.exception.ErrorCode.TAG_INVALID_NAME;
 import static com.epam.esm.gift_system.service.exception.ErrorCode.NON_EXISTENT_ENTITY;
 import static com.epam.esm.gift_system.service.exception.ErrorCode.USED_ENTITY;
-import static com.epam.esm.gift_system.service.validator.EntityValidator.ValidationType.INSERT;
+import static com.epam.esm.gift_system.service.validator.EntityValidator.ValidationType.STRONG;
 
 @Service
 public class TagServiceImpl implements TagService {
     private final TagDao tagDao;
     private final EntityValidator validator;
-    private final ConverterService converter;
+    private final DtoConverterService dtoConverter;
+    private final EntityConverterService entityConverterService;
 
     @Autowired
-    public TagServiceImpl(TagDao tagDao, EntityValidator validator, ConverterService converter) {
+    public TagServiceImpl(TagDao tagDao, EntityValidator validator, DtoConverterService dtoConverter
+            , EntityConverterService entityConverterService) {
         this.tagDao = tagDao;
         this.validator = validator;
-        this.converter = converter;
+        this.dtoConverter = dtoConverter;
+        this.entityConverterService = entityConverterService;
     }
 
     @Override
     @Transactional
     public TagDto create(TagDto tagDto) {
-        if (validator.isNameValid(tagDto.getName(), INSERT)) {
-            Optional<Tag> optionalTag = tagDao.findByName(tagDto.getName());
-            return optionalTag.isPresent()
-                    ? converter.convertEntityIntoDto(optionalTag.get())
-                    : converter.convertEntityIntoDto(tagDao.create(converter.convertDtoIntoEntity(tagDto)));
+        return dtoConverter.convertEntityIntoDto(createTag(entityConverterService.convertDtoIntoEntity(tagDto)));
+    }
+
+    @Override
+    @Transactional
+    public Tag createTag(Tag tag) {
+        if (validator.isNameValid(tag.getName(), STRONG)) {
+            Optional<Tag> optionalTag = tagDao.findByName(tag.getName());
+            return optionalTag.orElseGet(() -> tagDao.create(tag));
         }
-        throw new GiftSystemException(INVALID_NAME);
+        throw new GiftSystemException(TAG_INVALID_NAME);
     }
 
     @Override
@@ -52,7 +59,7 @@ public class TagServiceImpl implements TagService {
 
     @Override
     public TagDto findById(Long id) {
-        return converter.convertEntityIntoDto(findTagById(id));
+        return dtoConverter.convertEntityIntoDto(findTagById(id));
     }
 
     private Tag findTagById(Long id) {
@@ -61,7 +68,7 @@ public class TagServiceImpl implements TagService {
 
     @Override
     public List<TagDto> findAll() {
-        return tagDao.findAll().stream().map(converter::convertEntityIntoDto).collect(Collectors.toList());
+        return tagDao.findAll().stream().map(dtoConverter::convertEntityIntoDto).toList();
     }
 
     @Override
